将运行脚本移至 scripts/ 目录
- 移动 run-demo.ps1/cmd, run-simple.ps1, run-interactive.ps1, run-preview.ps1, run-diag.cmd 到 scripts/
- 修复 Set-Location 和 cd 路径（从 scripts/ 回到项目根目录）
- 更新 README.md 和 docs 中的脚本路径引用

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>